--- a/Serigramall.Web.Provider/src/styles/product.css
+++ b/Serigramall.Web.Provider/src/styles/product.css
@@ -1,5 +1,6 @@
 .body b1{
-    background: hsla(210, 20%, 90%, 1);
+    background: rgb(230, 76, 20);
+    
     padding: 2em 0;
     line-height: 1.6;
     display: flex;
@@ -50,7 +51,7 @@
   }
   
   .card:hover {
-    transform: scale(1.30);
+    transform: scale(1.25);
     box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12), 0 8px 32px -8px hsla(0, 0%, 0%, 0.14), 0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
   }
   
