--- a/Serigramall.Web.Client/src/styles/cartStyle.css
+++ b/Serigramall.Web.Client/src/styles/cartStyle.css
@@ -1,38 +1,174 @@
 .button {
-    border: none;
-    border-radius: 3px;
-    padding: 5px 10px;
-    cursor: pointer;
-  }
+  border: none;
+  border-radius: 3px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
 
-  .button:hover {
-    background-color: #cecece;
-  }
+.button:hover {
+  background-color: #51585e;
+}
 
-  .cart {
-    position: absolute;
-    margin-top: 10px;
-    margin-right: 20px;
-    border-radius: 30px;
-    width: 400px;
-    background-color: #222222;
-    color: white;
-  }
-  .cartVacio {
-    text-align: center;
-    margin-top: 5px;
-    font-size: 14px;
-  }
-    
-  .total {
-    text-align: center;
-    font-weight: bold;
-    margin-top: 15px;
-    padding-bottom: 35px;
-  }
-  .productsContainer{
-    max-height: 200px;
-    overflow-y: scroll;
-    margin-top: 5px;
-  }
-    
+.cart {
+  position: absolute;
+  margin-top: 10px;
+  margin-right: 20px;
+  border-radius: 30px;
+  width: 400px;
+  background-color: #222222;
+  color: white;
+}
+
+.cartVacio {
+  text-align: center;
+  margin-top: 5px;
+  font-size: 14px;
+}
+
+.total {
+  text-align: center;
+  font-weight: bold;
+  margin-top: 15px;
+  padding-bottom: 35px;
+}
+
+.productsContainer {
+  max-height: 200px;
+  overflow-y: scroll;
+  margin-top: 5px;
+}
+
+.cartContainer {
+  width: 100vw;
+  height: 50px;
+  display: flex;
+  justify-content: flex-end;
+  font-family: Roboto;
+}
+
+.buttonCart {
+  background-color: #222222;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 999px;
+}
+
+.buttonCartContainer {
+  position: absolute;
+  margin-top: 10px;
+  margin-right: 20px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.svg {
+  height: 25px;
+  margin-right: 2px;
+}
+
+.productsNumber {
+  height: 20px;
+  width: 20px;
+  border-radius: 999px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #fb3939;
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+  width: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #797979;
+  border-radius: 20px;
+}
+
+/* stilos de item carrito */
+.cartItem {
+  height: 80px;
+  background-color: #3a3a3a;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 15px;
+}
+
+.cartItemimg {
+  height: 65px;
+  border-radius: 5px;
+}
+
+.dataContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  padding: 15px 0;
+}
+
+.left {
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.leftp {
+  font-weight: bold;
+  font-size: 13px;
+}
+
+.leftbuttons {
+  display: flex;
+  gap: 5px;
+}
+
+.leftbutton {
+  border: none;
+  cursor: pointer;
+  font-size: 12px;
+  padding: 3px 5px;
+  border-radius: 5px;
+  font-weight: bold;
+  color: #222222;
+}
+
+
+.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.rightdiv {
+  background-color: #FB3939;
+  width: 20px;
+  height: 20px;
+  border-radius: 999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.rightp {
+  font-weight: bold;
+}
