--- a/Serigramall.Web.Client/src/styles/cartStyle.css
+++ b/Serigramall.Web.Client/src/styles/cartStyle.css
@@ -9,94 +9,8 @@
   background-color: #51585e;
 }
 
-.cart {
-  position: absolute;
-  margin-top: 10px;
-  margin-right: 20px;
-  border-radius: 30px;
-  width: 400px;
-  background-color: #222222;
-  color: white;
-}
 
-.cartVacio {
-  text-align: center;
-  margin-top: 5px;
-  font-size: 14px;
-}
 
-.total {
-  text-align: center;
-  font-weight: bold;
-  margin-top: 15px;
-  padding-bottom: 35px;
-}
-
-.productsContainer {
-  max-height: 200px;
-  overflow-y: scroll;
-  margin-top: 5px;
-}
-
-.cartContainer {
-  width: 100vw;
-  height: 50px;
-  display: flex;
-  justify-content: flex-end;
-  font-family: Roboto;
-}
-
-.buttonCart {
-  background-color: #222222;
-  width: 60px;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 999px;
-}
-
-.buttonCartContainer {
-  position: absolute;
-  margin-top: 10px;
-  margin-right: 20px;
-  cursor: pointer;
-  z-index: 2;
-}
-
-.svg {
-  height: 25px;
-  margin-right: 2px;
-}
-
-.productsNumber {
-  height: 20px;
-  width: 20px;
-  border-radius: 999px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: #fb3939;
-  font-size: 14px;
-  font-weight: bold;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-::-webkit-scrollbar {
-  -webkit-appearance: none;
-}
-
-::-webkit-scrollbar:vertical {
-  width: 3px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #797979;
-  border-radius: 20px;
-}
 
 /* stilos de item carrito */
 .cartItem {
@@ -171,4 +85,102 @@
 
 .rightp {
   font-weight: bold;
+}
+
+/* estilos del carrito carrito */
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+  width: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #797979;
+  border-radius: 20px;
+}
+
+.cartContainer {
+  width: 100vw;
+  height: 50px;
+  display: flex;
+  justify-content: flex-end;
+  font-family: Roboto;
+  
+}
+
+.buttonCartContainer {
+  position: absolute;
+  margin-top: 10px;
+  margin-right: 20px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+svg {
+  height: 25px;
+  margin-right: 2px;
+}
+
+.buttonCart {
+  background-color: #222222;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 999px;
+}
+
+.productsNumber {
+  height: 20px;
+  width: 20px;
+  border-radius: 999px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #fb3939;
+  font-size: 12px;
+  font-weight: bold;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cart { /*color del carrito*/
+  position: absolute;
+  margin-top: 10px;
+  margin-right: 20px;
+  border-radius: 30px;
+  width: 400px;
+  background-color: #222222;
+  color: white;
+}
+
+h2 {
+  text-align: center;
+  font-weight: bold;
+  margin-top: 35px;
+}
+
+.cartVacio {
+  text-align: center;
+  margin-top: 5px;
+  font-size: 14px;
+}
+
+.total {
+  text-align: center;
+  font-weight: bold;
+  margin-top: 15px;
+  padding-bottom: 35px;
+}
+
+.productsContainer {
+  max-height: 200px;
+  overflow-y: scroll;
+  margin-top: 5px;
 }
