--- a/Serigramall.Web.Client/src/styles/cartStyle.css
+++ b/Serigramall.Web.Client/src/styles/cartStyle.css
@@ -14,7 +14,7 @@
 
 /* stilos de item carrito */
 .cartItem {
-  height: 80px;
+  height: 210px;
   background-color: #3a3a3a;
   margin-top: 20px;
   display: flex;
@@ -37,10 +37,11 @@
 }
 
 .left {
-  padding-left: 20px;
+  padding-left: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: left;
 }
 
 .leftp {
@@ -67,8 +68,8 @@
 .right {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: flex-end;
+  gap: 5px;
 }
 
 .rightdiv {
@@ -84,7 +85,8 @@
 }
 
 .rightp {
-  font-weight: bold;
+  font-weight: bold;  
+  margin-top: 0px;
 }
 
 /* estilos del carrito carrito */
@@ -174,12 +176,67 @@ h2 {
 .total {
   text-align: center;
   font-weight: bold;
-  margin-top: 15px;
-  padding-bottom: 35px;
+  margin-top: 10px;
+  padding-bottom: 10px;
 }
 
 .productsContainer {
-  max-height: 200px;
+  max-height: 400px;
   overflow-y: scroll;
   margin-top: 5px;
+}
+/*Serigrafia stilos*/
+.cartItem2 {
+  margin-top: 10px;
+  height: 80px;
+  background-color: #3a3a3a;
+  display: flex;
+  align-items: left;
+  justify-content: space-between;
+
+}
+.cartItemimg2 {
+  height: 65px;
+  border-radius: 5px;
+}
+.dataContainer2 {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+.left2 {
+  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.leftp2 {
+  font-weight: bold;
+  font-size: 13px;
+}
+
+.right2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.rightdiv2 {
+  background-color: #FB3939;
+  width: 20px;
+  height: 20px;
+  border-radius: 999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  font-weight: bold;
+  margin-left: 10px;
+
+}
+
+.rightp2 {
+  font-weight: bold;
 }
