--- a/Serigramall.Web.Client/src/styles/cartStyle.css
+++ b/Serigramall.Web.Client/src/styles/cartStyle.css
@@ -1,3 +1,20 @@
+/* X-Large devices (large desktops, 1200px and up) */
+@media (max-width: 1200px) {
+  .cart {
+    /*color del carrito*/
+    width: 400px;
+  }
+}
+
+/* Small devices (landscape phones, 576px and up)*/
+@media (max-width: 575px) {
+  .cart {
+    /*color del carrito*/
+    width: 300px;
+  }
+}
+
+
 .button {
   border: none;
   border-radius: 3px;
@@ -8,9 +25,6 @@
 .button:hover {
   background-color: #51585e;
 }
-
-
-
 
 /* stilos de item carrito */
 .cartItem {
@@ -85,7 +99,7 @@
 }
 
 .rightp {
-  font-weight: bold;  
+  font-weight: bold;
   margin-top: 0px;
 }
 
@@ -113,7 +127,7 @@ div.productsContainer::-webkit-scrollbar-thumb {
   position: fixed;
   bottom: 10px;
   right: 10px;
-  
+
   cursor: pointer;
   z-index: 3;
 }
@@ -149,11 +163,12 @@ svg {
   justify-content: center;
 }
 
-.cart { /*color del carrito*/
+.cart {
+  /*color del carrito*/
   position: fixed;
   bottom: 10px;
   right: 80px;
-  width: 400px;
+  width: 70vw;
   padding: 8px;
   border-radius: 30px;
   background-color: #222222;
@@ -186,6 +201,7 @@ h2 {
   overflow-y: scroll;
   margin-top: 5px;
 }
+
 /*Serigrafia stilos*/
 .cartItem2 {
   margin-top: 10px;
@@ -196,16 +212,19 @@ h2 {
   justify-content: space-between;
 
 }
+
 .cartItemimg2 {
   height: 65px;
   border-radius: 5px;
 }
+
 .dataContainer2 {
   display: flex;
   justify-content: space-between;
   width: 100%;
   height: 100%;
 }
+
 .left2 {
   padding-left: 10px;
   display: flex;
@@ -241,3 +260,4 @@ h2 {
 .rightp2 {
   font-weight: bold;
 }
+
