--- a/Serigramall.Web.Client/src/styles/loginForm.css
+++ b/Serigramall.Web.Client/src/styles/loginForm.css
@@ -6,35 +6,35 @@
 }
 
 /* Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) {
+@media (max-width: 576px) {
   .loginForm {
     max-width: 500px;
   }
 }
 
 /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .loginForm {
     max-width: 700px;
   }
 }
 
 /*  Large devices (desktops, 992px and up) **/
-@media (min-width: 992px) {
+@media (max-width: 992px) {
   .loginForm {
     max-width: 900px;
   }
 }
 
 /* X-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
   .loginForm {
     max-width: 900px;
   }
 }
 
 /* XX-Large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) {
+@media (max-width: 1400px) {
   .loginForm {
     max-width: 900px;
   }
