--- a/Serigramall.Web.Client/src/styles/product.css
+++ b/Serigramall.Web.Client/src/styles/product.css
@@ -1,3 +1,28 @@
+/* X-Large devices (large desktops, 1200px and up) */
+@media (max-width: 1200px) {
+  .cart {
+    /*color del carrito*/
+    width: 400px;
+  }
+
+  .header {
+    width: 100%;
+  }
+}
+
+/* Small devices (landscape phones, 576px and up)*/
+@media (max-width: 575px) {
+  .cart {
+    /*color del carrito*/
+    width: 300px;
+  }
+
+  .header {
+    width: 100%;
+  }
+
+}
+
 .body b1 {
   background: rgb(230, 76, 20);
 
@@ -18,23 +43,11 @@ h5 {
 }
 
 .header {
-  text-align: center;
-  margin-bottom: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.header h1 {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 3em;
-  margin-bottom: 0.2em;
-  line-height: 1.2;
-  color: #222
-}
-
-.header h3 {
-  font-weight: 400;
-  color: #555;
-  width: 30em;
-}
 
 .cards {
   display: flex;
