--- a/Serigramall.Web.Client/src/styles/ProductsModalStyles.css
+++ b/Serigramall.Web.Client/src/styles/ProductsModalStyles.css
@@ -1,3 +1,22 @@
-.modal-95w{
+.modal-95w {
     max-width: 95% !important;
+}
+
+@media (min-width: 801px) {
+    .modal-product-image {
+        width: 200px;
+    }
+}
+
+@media (max-width: 800px) {
+    .modal-product-image {
+        width: 150px;
+    }
+}
+
+/* Small devices (landscape phones, 576px and up)*/
+@media (max-width: 575px) {
+    .modal-product-image {
+        width: 75px;
+    }
 }
