--- a/Serigramall.Web.Client/src/styles/product.css
+++ b/Serigramall.Web.Client/src/styles/product.css
@@ -1,7 +1,7 @@
 /* X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 576px) {
   .header {
-    flex-direction: column;
+    flex-direction: row;
   }
 
   .header-filter {
