--- a/Serigramall.Web.Client/src/styles/main.css
+++ b/Serigramall.Web.Client/src/styles/main.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     margin: 0;
     min-height: 100vh;
 }
@@ -10,4 +11,25 @@ html, body {
 
 .main {
     height: calc(100vh - (56px + 16px));
-  }
+}
+
+.Navbarbg {
+    background-color: #444547;
+}
+
+.custom-btn {
+    background-color: #444547 !important;
+    color: #fff;
+    border: #fff !important;
+}
+
+.custom-btn:hover {
+    background-color: #AAC8E2 !important;
+    color: #375D81 !important;
+    border: #375D81;
+}
+.titulo {
+    background-color: #444547 !important;
+    color: #AAC8E2 !important;
+    font-size: 200%;
+}
