--- a/Serigramall.Web.Client/src/styles/cartStyle.css
+++ b/Serigramall.Web.Client/src/styles/cartStyle.css
@@ -12,26 +12,17 @@
   }
 }
 
-.button {
-  border: none;
-  border-radius: 3px;
-  padding: 5px 10px;
-  cursor: pointer;
-}
-
-.button:hover {
-  background-color: #51585e;
-}
-
 /* stilos de item carrito */
 .cartItem {
   height: 210px;
-  background-color: #3a3a3a;
+  background-color: #fff;
   margin-top: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 15px;
+  border-radius: 5px;
+  
 }
 
 .cartItemimg {
@@ -45,6 +36,7 @@
   width: 100%;
   height: 100%;
   padding: 15px 0;
+  color: #183052;
 }
 
 .left {
@@ -84,7 +76,7 @@
 }
 
 .rightdiv {
-  background-color: #FB3939;
+  background-color: #183052;
   width: 20px;
   height: 20px;
   border-radius: 999px;
@@ -93,6 +85,7 @@
   justify-content: center;
   font-size: 12px;
   font-weight: bold;
+  color: #aac8e2;
 }
 
 .rightp {
@@ -118,13 +111,26 @@ div.productsContainer::-webkit-scrollbar-thumb {
 .cartContainer {
   width: 100vw;
   display: relative;
+  
+}
+.dataContainer button {
+  background: #183052;
+  font-family: 'Montserrat', sans-serif;
+  transition: all ease-in 100ms;
+  color: #fff;
+  font-size: 0.9em;
+}
+
+.dataContainer button:hover {
+  transition: all ease-in 100ms;
+  background: #aac8e2;
+  color: #183052;
 }
 
 .buttonCartContainer {
   position: fixed;
   bottom: 10px;
   right: 10px;
-
   cursor: pointer;
   z-index: 3;
 }
@@ -135,7 +141,7 @@ svg {
 }
 
 .buttonCart {
-  background-color: #222222;
+  background-color: #183052;
   width: 60px;
   height: 60px;
   display: flex;
@@ -151,8 +157,8 @@ svg {
   position: absolute;
   top: 0;
   right: 0;
-  background-color: #fb3939;
-  font-size: 12px;
+  background-color: #aac8e2;
+  font-size: 0.9em;;
   font-weight: bold;
   color: white;
   display: flex;
@@ -168,28 +174,25 @@ svg {
   width: 70vw;
   padding: 8px;
   border-radius: 20px;
-  background-color: #222222;
+  background-color: #183052;
   color: white;
   z-index: 2;
 }
 
 h2 {
   text-align: left;
-  padding: 12px;
   font-weight: bold;
-  margin-top: 35px;
 }
 
 .cartVacio {
   text-align: center;
   margin-top: 5px;
-  font-size: 14px;
+  font-size: 2em;
 }
 
 .total {
   text-align: left;
   font-weight: bold;
-  margin-top: 15px;
   padding: 12px;
 }
 
@@ -203,7 +206,6 @@ h2 {
 .cartItem2 {
   margin-top: 10px;
   height: 80px;
-  background-color: #3a3a3a;
   display: flex;
   align-items: left;
   justify-content: space-between;
@@ -241,7 +243,6 @@ h2 {
 }
 
 .rightdiv2 {
-  background-color: #FB3939;
   width: 20px;
   height: 20px;
   border-radius: 999px;
@@ -257,4 +258,3 @@ h2 {
 .rightp2 {
   font-weight: bold;
 }
-
