--- a/Serigramall.Web.Client/src/styles/product.css
+++ b/Serigramall.Web.Client/src/styles/product.css
@@ -26,22 +26,22 @@
   width: 90%;
   margin:auto;
   margin-bottom: 48px;
-
   display: flex;  
+  
 }
 
 .header-title {
   align-self: flex-start;
+  padding-right: 10px;
 }
 
 .header-filter {
   align-self: flex-end;
   display: flex;
+  padding-right: 10px;
 }
 
 .body b1 {
-  background: rgb(230, 76, 20);
-
   padding: 2em 0;
   line-height: 1.6;
   display: flex;
@@ -65,7 +65,7 @@ h5 {
 }
 
 .card {
-  background: rgb(231, 225, 225);
+  background: #aac8e2;
   padding: 0;
   width: 18em;
   border-radius: 0.6em;
@@ -89,29 +89,31 @@ h5 {
   object-fit: contain;
 }
 
-.card h2 {
-  color: #222;
-  margin-top: -0.2em;
-  line-height: 1.4;
-  font-size: 1.3em;
-  font-weight: 500;
+.card-body {
   font-family: 'Montserrat', sans-serif;
   transition: all ease-in 100ms;
-}
-
-.card p {
-  color: #777;
-}
-
-.card h5 {
-  color: #bbb;
-  font-weight: 700;
-  font-size: 0.7em;
-  letter-spacing: 0.04em;
-  margin: 1.4em 0 0 0;
-  text-transform: uppercase;
-}
-
-.card-body {
   padding: 1.2em;
+  color: #fff;
+}
+.card-header {
+  font-family: 'Montserrat', sans-serif;
+  transition: all ease-in 100ms;
+  background: #375d81;;
+  padding: 1em;
+  color: #fff;
+  font-size: 1.5em;
+}
+.card button {
+  background: #375d81;
+  border-block-color: #375d81;
+  font-family: 'Montserrat', sans-serif;
+  transition: all ease-in 100ms;
+  color: #fff;
+  font-size: 1.1em;
+}
+.card button:hover {
+  font-family: 'Montserrat', sans-serif;
+  transition: all ease-in 100ms;
+  background: #183052;
+  color: #fff;
 }
