--- a/Serigramall.Web.Client/src/styles/cartStyle.css
+++ b/Serigramall.Web.Client/src/styles/cartStyle.css
@@ -49,7 +49,7 @@
 
 .leftp {
   font-weight: bold;
-  font-size: 13px;
+  font-size: 70%;
 }
 
 .leftbuttons {
@@ -60,7 +60,7 @@
 .leftbutton {
   border: none;
   cursor: pointer;
-  font-size: 12px;
+  font-size:80%;
   padding: 3px 5px;
   border-radius: 5px;
   font-weight: bold;
@@ -83,9 +83,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
+  font-size: 75%; 
   font-weight: bold;
-  color: #aac8e2;
+  color: #fff;
 }
 
 .rightp {
@@ -118,7 +118,7 @@ div.productsContainer::-webkit-scrollbar-thumb {
   font-family: 'Montserrat', sans-serif;
   transition: all ease-in 100ms;
   color: #fff;
-  font-size: 0.9em;
+  font-size:80%;
 }
 
 .dataContainer button:hover {
@@ -158,7 +158,7 @@ svg {
   top: 0;
   right: 0;
   background-color: #aac8e2;
-  font-size: 0.9em;;
+  font-size: 75%;
   font-weight: bold;
   color: white;
   display: flex;
@@ -187,7 +187,7 @@ h2 {
 .cartVacio {
   text-align: center;
   margin-top: 5px;
-  font-size: 2em;
+  font-size: 150%
 }
 
 .total {
@@ -233,7 +233,7 @@ h2 {
 
 .leftp2 {
   font-weight: bold;
-  font-size: 13px;
+  font-size: 65%;
 }
 
 .right2 {
@@ -249,7 +249,7 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
+  font-size: 100%;
   font-weight: bold;
   margin-left: 10px;
 
