--- a/Serigramall.Web.Client/src/styles/main.css
+++ b/Serigramall.Web.Client/src/styles/main.css
@@ -39,7 +39,6 @@ body {
 
 
 .titulo {
-    background-color: #183052 !important;
     color: #fff !important;
     border: #375D81;
     font-size: 200%;
@@ -70,7 +69,7 @@ h1 {
     font-family: 'Montserrat', sans-serif;
     transition: all ease-in 100ms;
     color: #183052;
-    font-size: 1.1em;
+    font-size: 110%;
   }
 .Button:hover {
 font-family: 'Montserrat', sans-serif;
@@ -83,10 +82,12 @@ border-block-color: #fff;
 .styled-table {
     border-collapse: collapse;
     margin: 25px 0;
-    font-size: 1.5em;
-    font-family: sans-serif;
+    font-size: 0.2m;
     min-width: 400px;
     box-shadow: 0 0 20px #375D81;
+    font-family: 'Montserrat', sans-serif;
+    transition: all ease-in 100ms;
+    font-size: 80%;
 }
 .styled-table th,
 .styled-table td {
