--- a/Serigramall.Web.Client/src/styles/main.css
+++ b/Serigramall.Web.Client/src/styles/main.css
@@ -16,21 +16,25 @@ body {
 .Navbarbg {
     background-color: #375d81;
 }
+
 .Navbarbg a {
     background-color: #375d81 !important;
     color: #fff;
     border: #fff !important;
 }
+
 .Navbarbg a:hover {
     background-color: #AAC8E2 !important;
     color: #375D81 !important;
     border: #375D81;
 }
-.Navbarbg button{
+
+.Navbarbg button {
     background-color: #375d81 !important;
     color: #fff;
     border: #fff !important;
 }
+
 .Navbarbg button:hover {
     background-color: #AAC8E2 !important;
     color: #375D81 !important;
@@ -48,10 +52,50 @@ body {
     cursor: pointer;
 }
 
-h1 {
+h1,h2 {
     color: #183052 !important;
     font-size: 200%;
 }
+
+label {
+    font-family: 'Montserrat', sans-serif;
+    transition: all ease-in 100ms;
+    color: #183052;
+    border-block-color: #fff;
+}
+.form-control {
+    background: #C5D7ED;
+    border-block-color: #183052;
+    font-family: 'Montserrat', sans-serif;
+    transition: all ease-in 100ms;
+    color: #183052;
+    font-size: 100%;
+}
+
+.form-control:hover {
+    background: #C5D7ED;
+    font-family: 'Montserrat', sans-serif;
+    transition: all ease-in 100ms;
+    color: #183052;
+    border-block-color: #fff;
+}
+.form-select {
+    background: #C5D7ED;
+    border-block-color: #183052;
+    font-family: 'Montserrat', sans-serif;
+    transition: all ease-in 100ms;
+    color: #183052;
+    font-size: 100%;
+}
+
+.form-select:hover {
+    background: #C5D7ED;
+    font-family: 'Montserrat', sans-serif;
+    transition: all ease-in 100ms;
+    color: #183052;
+    border-block-color: #fff;
+}
+
 
 .form {
     background-color: #fff !important;
@@ -63,6 +107,7 @@ h1 {
     color: #183052 !important;
     border: #183052;
 }
+
 .Button {
     background: #C5D7ED;
     border-block-color: #183052;
@@ -70,41 +115,12 @@ h1 {
     transition: all ease-in 100ms;
     color: #183052;
     font-size: 110%;
-  }
-.Button:hover {
-font-family: 'Montserrat', sans-serif;
-transition: all ease-in 100ms;
-background: #AAC8E2;
-color: #183052;
-border-block-color: #fff;
 }
 
-.styled-table {
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 0.2m;
-    min-width: 400px;
-    box-shadow: 0 0 20px #375D81;
+.Button:hover {
     font-family: 'Montserrat', sans-serif;
     transition: all ease-in 100ms;
-    font-size: 80%;
-}
-.styled-table th,
-.styled-table td {
-    padding: 12px 15px;
-}
-.styled-table tbody tr {
-    border-bottom: 1px solid #375D81;
-}
-
-.styled-table tbody tr:nth-of-type(even) {
-    background-color: #C5D7ED;
-}
-
-.styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #375D81;
-}
-.styled-table tbody tr.active-row {
-    font-weight: bold;
-    color: #375D81;
+    background: #183052;
+    color: #fff;
+    border-block-color: #fff;
 }
